# qtpipeline

./: CMakeLists.txt  README.md  checkclass.h  ckeckclass.cpp  main.cpp  qtsystem.pro  test.pri  time_check.sh
QtJenkins/: .gitignore  JenkindfileArm  Jenkinsfile  QtJenkins.pro  mahmoud.txt  run_qmake.sh  test.pri
QtJenkins/libs/Benchtop/: Benchtop.pri  Benchtop.pro  main.cpp
QtJenkins/libs/Test/: CMakeLists.txt  Test.pri  Test.pro  directories.groovy
QtJenkins/libs/Test/unittest/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  FindGoogleMock  cmake_install.cmake  finddirectories.cmake  hahtest  mahtest  run_test.sh
QtJenkins/libs/Test/unittest/Testing/Temporary/: CTestCostData.txt
QtJenkins/libs/Test/unittest/mahTest/: hahtest.cpp  mahtest.cpp
QtJenkins/libs/Test/unittest/testFolder_autogen/: moc_predefs.h
QtJenkins/libs/utilities/: utilities.pri  utilities.pro
pipelineJenkins/: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  main.cpp
pipelineJenkins/unittest/: CMakeLists.txt  findGmock.cmake  run_test.sh
pipelineJenkins/unittest/mahTest/: mahtest.cpp
unittest/: CMakeLists.txt
unittest/mahTest/: mahtest.h
